# libla

./: README.md  main.py  pyproject.toml  test_main.py
examples/: Benchmark.ipynb  Hello World.ipynb
libla/: __init__.py  matrix.py  rank_decomposition.py  vect.py
test/: libla_test.py
