[tool.poetry]
name = "libla"
version = "0.1.0"
description = ""
authors = ["Heinrich Hartmann <heinrich@heinrichhartmann.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.2"
scipy = "^1.6.1"
numpy = "^1.20.1"
pandas = "^1.2.2"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
